--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#"></a>About</li>
             <li class="ctn"><a href="#"></a>Contact Us</li>
         </ul>
-        <img class="menu-btn" src="./img/threelines.png" alt="">
+        <img class="menu-btn" src="threelines.png" alt="">
     </nav>
     
     <header>
