--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#"></a>About</li>
             <li class="ctn"><a href="#"></a>Contact Us</li>
         </ul>
-        <img class="menu-btn" src="threelines.png" alt="">
+        <img class="menu-btn" src="./threelines.png" alt="">
     </nav>
     
     <header>
@@ -42,14 +42,14 @@
         </div>
         <div class="row">
             <div class="col">
-                <img src="./img/trek.jpg" style="height: 500px; width: 650px;" alt="trek-photo">
+                <img src="./trek.jpg" style="height: 500px; width: 650px;" alt="trek-photo">
                 <h4>Camping in Forest</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quo? Excepturi asperiores sit quaerat quis. Fugit, incidunt. Ea ducimus dolor placeat laborum ullam harum, magnam inventore hic distinctio fuga? Harum?</p>
                 <a href="#" class="ctn">Learn More</a>
             </div>
 
             <div class="col">
-                <img src="./img/walking-person.jpg" style="height: 500px; width: 650px;"  alt="walking-person">
+                <img src="./walking-person.jpg" style="height: 500px; width: 650px;"  alt="walking-person">
                 <h4>Walking Holiday</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quo? Excepturi asperiores sit quaerat quis. Fugit, incidunt. Ea ducimus dolor placeat laborum ullam harum, magnam inventore hic distinctio fuga? Harum?</p>
                 <a href="#" class="ctn">Learn More</a>
@@ -83,10 +83,10 @@
                 </div>
                 <div class="col image-col">
                     <div class="image-gallery">
-                        <img src="./img/pic1.jpg " alt="">
-                        <img src="./img/pic2.jpg" alt="">
-                        <img src="./img/pic3.jpg" alt="">
-                        <img src="./img/pic4.jpg" alt="">
+                        <img src="./pic1.jpg " alt="">
+                        <img src="./pic2.jpg" alt="">
+                        <img src="./pic3.jpg" alt="">
+                        <img src="./pic4.jpg" alt="">
                     </div>
                 </div>
             </div>
